examples/test/testpolicy14192.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14192
  namespace: namespace30
spec:
  podSelector:
    matchLabels:
      key41: value8
      key10: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value29
          key41: value16
      podSelector:
        matchLabels:
          key47: value49
